tests/NormalTests/paczka1/fuzzy1/74254542.err
Error in line 5: S774 S407 23,0
Error in line 11: S774 S340 51,2
Error in line 19: KtqvfMnATmp S530 78,1
Error in line 27: IZSx S774 11,6
Error in line 20: KtqvfMnATmp S774 87,7
Error in line 38: nzMXTECK S530 41,1
